<resources>
    <string name="app_name">手机管理系统</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="setting">设置</string>
    <string name="switch_model">切换主题</string>
    <string name="login_out">未登录</string>
    <string name="set_pwd_title">设置密码</string>
    <string name="input_pwd_title">输入密码</string>
    <string name="input_pwd">输入密码：</string>
    <string name="input_pwd_again">再次输入：</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="reset_lock_pwd_title">重置解锁密码</string>
    <string name="input_new_pwd">新密码：</string>

    <string name="reset_pwd_title">重置密码</string>
    <string name="input_origin_pwd">输入原始密码：</string>
    <string name="input_reset_pwd">输入新的密码：</string>
    <string name="input_reset_pwd_again">再次输入密码：</string>

    <string name="reset_phone_title">重置安全号码</string>
    <string name="input_new_phone">输入新号码：</string>

    <string name="security_welcome">欢迎使用手机防盗</string>
    <string name="set_security_num">设置安全号码</string>
    <string name="next">下一步</string>
    <string name="start_security">开启手机防盗</string>
    <string name="security_description">请输入或选择联系人作为安全号码，\n SIM卡变更后，报警短信会发送给安全号码</string>
    <string name="location_str">定位手机的位置</string>
    <string name="sample_device_admin_description">我是设备超级管理员的描述</string>
    <string name="sample_device_admin">我是设备超级管理员</string>
    <string name="open_proof_service">开启手机防盗服务</string>
    <string name="change_safe_num">更改安全号码</string>
    <string name="change_pwd">更改密码</string>

    <string name="add_black_num">添加黑名单</string>
    <string name="black_num_hint">请输入黑名单号码</string>
    <string name="phone_intercept">电话拦截</string>
    <string name="sms_intercept">短信拦截</string>
    <string name="soft_manager_title">软件管家</string>
    <string name="open_soft_lock">开启程序锁</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>


    <string name="login_reg_text">点击按钮注册或登录</string>
    <string name="input_login_title">登录</string>
    <string name="input_register_title">注册</string>

    <!--注册-->
    <string name="register">注册</string>
    <string name="email">注册邮箱:</string>
    <string name="email_hint">帮助您找回密码</string>
    <string name="pwd">注册密码:</string>
    <string name="pwd_again">再次输入:</string>
    <string name="pwd_hint">4～20位字母，下划线或数字</string>
    <string name="name">用户昵称:</string>
    <string name="name_hint">3～10位字母，下划线或数字</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="user">用户:</string>
    <string name="login_pwd">密码:</string>
    <string name="user_hint">用户名或邮箱</string>

    <!--重置密码-->
    <string name="user_email">邮箱:</string>
    <string name="user_email_hint">请输入注册的邮箱</string>
    <string name="get_check_code">获取校验码</string>

    <!--验证邮箱-->
    <string name="check_code_title">验证邮箱</string>
    <string name="check_code">校验码:</string>
    <string name="check_code_hint">请输入邮箱校验码</string>
    <string name="check_code_remain">请去邮箱查收校验码</string>

    <!--重置密码-->
    <string name="reset_pwd">输入密码:</string>
    <string name="reset_pwd_hint">请输入新密码</string>
    <string name="reset_pwd_again">再次输入:</string>
    <string name="reset_pwd_again_hint">请再次输入新密码</string>

</resources>
